--- a/app/assets/javascripts/templates/item_static.handlebars
+++ b/app/assets/javascripts/templates/item_static.handlebars
@@ -1,5 +1,5 @@
 {{#with listItem}}
-  <li {{bindAttr class='isActive'}}>
+  <li {{bindAttr class='isActive'}} {{bindAttr style='computedIndentionStyle'}}>
     <span>{{order}} {{text}}</span>
   </li>
 {{/with}}
