added click to select & fixed deletions

--- a/app/assets/javascripts/templates/list.handlebars
+++ b/app/assets/javascripts/templates/list.handlebars
@@ -1,7 +1,7 @@
 <h3>Notes</h3>
 
 <ul id="notes">
-  {{#each note in content}} {{! this is gross, change later }}
+  {{#each note in content}}
     <li>{{#linkTo note note}}{{note.title}}{{/linkTo}}</li>
   {{/each}}
 </ul>
