--- a/app/assets/javascripts/templates/list.handlebars
+++ b/app/assets/javascripts/templates/list.handlebars
@@ -1,8 +1,6 @@
-<h3>Notes</h3>
-
-<ul id="notes">
+<ul class="notes-list unstyled">
   {{#each note in content}}
-    <li>{{#linkTo note note}}{{note.title}}{{/linkTo}}</li>
+    <li {{bindAttr class='isSelected'}}>{{#linkTo note note}}{{note.title}}{{/linkTo}}</li>
   {{/each}}
 </ul>
 
