--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -23,8 +23,8 @@
 
     <div class='controls bottom'>
       <div class='left-controls btn-group'>
-        <button class='btn btn-small'><i class='icon-plus'></i></button>
-        <button class='btn btn-small'><i class='icon-remove'></i></button>
+        <button class='btn btn-small' {{action "createNote"}}><i class='icon-plus'></i></button>
+        <button class='btn btn-small' {{action "deleteNote"}}><i class='icon-remove'></i></button>
       </div>
     </div>
   </div>
