added modal help shortcut

--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -1,7 +1,12 @@
 <div class="wrapper">
 
   <header>
-    <h1>Noted</h1>
+    <div class='left'>
+      <h1>Noted</h1>
+    </div>
+    <div class='right'>
+      press ? for help
+    </div>
   </header>
 
   <div class="window">
@@ -40,3 +45,5 @@
   </footer>
 
 </div>
+
+{{partial shortcuts_modal}}
