added 404s. upgraded emberjs. &c.

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -122,12 +122,6 @@ header {
   }
 }
 
-.app-content {
-  background-color:#f3f3f3;
-  border:1px #000 solid;
-  .border-radius(10px);
-}
-
 header {
   margin:0;
   div.left {
@@ -288,6 +282,10 @@ header {
 
     width:100%;
   }
+}
+
+.text-content {
+  padding:10px;
 }
 
 #shortcuts-modal {
