--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -10,40 +10,11 @@
   </header>
 
   <div class="window">
-    <div class='controls top'>
-      &nbsp;
-    </div>
-
-    <div class="main">
-
-      <div class="sidebar-pane">
-      {{outlet list}}
-      </div>
-
-      <div class="body-pane">
-      {{outlet note}}
-      </div>
-
-    </div>
-
-    <div class='controls bottom'>
-      <div class='left-controls btn-group'>
-        <button class='btn btn-small' {{action "createNote"}}><i class='icon-plus'></i></button>
-        <button class='btn btn-small' {{action "deleteNote"}}><i class='icon-remove'></i></button>
-      </div>
-    </div>
+    {{outlet}}
   </div>
-
-  <script>
-    $(".sidebar-pane").resize(function(e) {
-      $(".body-pane").css("margin-left", $(e.target).width() + "px");
-    })
-  </script>
 
   <footer>
     <!-- ... -->
   </footer>
 
 </div>
-
-{{partial shortcuts_modal}}
