--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -90,13 +90,8 @@ header {
       margin-top:2px;
 
       .btn {
-        .buttonBackground(rgb(175,175,175), darken(rgb(175,175,175), 10%));
-        #gradient > .vertical(darken(rgb(228,228,228), 10%), darken(rgb(175,175,175), 10%));
+        .buttonBackground(rgb(228,228,228), darken(rgb(175,175,175), 10%), #333, none);
         border-color:#555;
-
-        i {
-          color:#333;
-        }
       }
     }
   }
