--- a/app/assets/javascripts/templates/item_editing.handlebars
+++ b/app/assets/javascripts/templates/item_editing.handlebars
@@ -1,5 +1,5 @@
 {{#with listItem}}
-  <li {{bindAttr class='isActive'}} {{bindAttr style='computedIndentionStyle'}}>
+  <li {{bindAttr class=':entry-item isActive'}} {{bindAttr style='computedIndentionStyle'}}>
     <input type="text" {{bindAttr value='text'}} />
   </li>
 {{/with}}
