--- a/app/assets/javascripts/templates/static/_shortcuts_modal.handlebars
+++ b/app/assets/javascripts/templates/static/_shortcuts_modal.handlebars
@@ -4,7 +4,7 @@
     <h3 id="myModalLabel">Help</h3>
   </div>
   <div class="modal-body">
-    {{ partial shortcuts_content }}
+    {{ partial "static/shortcuts_content" }}
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>
