--- a/app/assets/javascripts/templates/static/404.handlebars
+++ b/app/assets/javascripts/templates/static/404.handlebars
@@ -13,6 +13,6 @@
 
 <script>
   $("#home-button").click(function() {
-    Noted.Router.router.transitionTo("index");
+    Noted.Router.router.transitionToRoute("index");
   })
 </script>
