textareas for list entries (multi lines)

--- a/app/assets/javascripts/templates/item_editing.handlebars
+++ b/app/assets/javascripts/templates/item_editing.handlebars
@@ -1,5 +1,5 @@
 {{#with listItem}}
   <li {{bindAttr class=':entry-item isActive'}} {{bindAttr style='computedIndentionStyle'}}>
-    <input type="text" {{bindAttr value='text'}} />
+    {{view Noted.ItemTextArea valueBinding=text}}
   </li>
 {{/with}}
