--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -236,14 +236,19 @@ header {
           }
           line-height:24px;
           padding:0;
+          vertical-align:top;
 
           span {
+            display:block;
             padding-left:1px;
+            padding-top:1px;
+            padding-bottom:1px;
           }
 
-          input {
+          textarea {
             display:inline-block;
             box-sizing:border-box;
+            resize:none;
             vertical-align:top;
             background:#d9dee6;
             
