offline caching stuff?

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="/application.appcache">
 <head>
   <title>Noted</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
