Only use appcache when running in production

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html manifest="/application.appcache">
+<% if Rails.env == "production" %>
+  <html manifest="/application.appcache">
+<% else %>
+  <html>
+<% end %>
 <head>
   <title>Noted</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
