basic import/export functionality

--- a/app/assets/javascripts/templates/dropbox_controls.handlebars
+++ b/app/assets/javascripts/templates/dropbox_controls.handlebars
@@ -5,3 +5,5 @@
   <button class='btn btn-small' {{action "loginToDropbox" target="view"}}><i class='icon-folder-open'></i> Sign in to Dropbox</button>
 {{/if}}
 <button class='btn btn-small' {{action "showDropboxHelp" target="view"}}><i class='icon-question-sign'></i></button>
+
+{{partial "static/dropbox_saving_modal"}}
