--- a/app/assets/javascripts/templates/static/_dropbox_saving_modal.handlebars
+++ b/app/assets/javascripts/templates/static/_dropbox_saving_modal.handlebars
@@ -20,7 +20,7 @@
         {{/if}}
       {{else}}
         {{#if view.isExport}}
-          <p>Exporting your files to Dropbox will place them in the folder <code>/Apps/Noted-App/</code>. <strong>It will replace the existing contents of that folder with your current notes.</strong></p>
+          <p>Exporting your notes to Dropbox will place them in the folder <code>/Apps/Noted-App/</code>. <strong>It will replace the existing contents of that folder with your current notes.</strong></p>
         {{else}}
           <p>Importing from Dropbox will replace <strong>all existing notes</strong> with the contents of <code>/Apps/Noted-App/</code>.</p>
         {{/if}}
