gigantic refactor that probably broke a bunch of shit

--- a/app/assets/javascripts/templates/app_window.handlebars
+++ b/app/assets/javascripts/templates/app_window.handlebars
@@ -24,4 +24,4 @@ $(".sidebar-pane").resize(function(e) {
 })
 </script>
 
-{{partial "static/shortcuts_modal"}}
+{{partial "modals/shortcuts/shortcuts_modal"}}
