--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_modal.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_modal.handlebars
@@ -1,10 +1,10 @@
-<div id="dropbox-help-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="Dropbox Help Modal" aria-hidden="true">
+<div id="shortcuts-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="Shortcuts Modal" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Dropbox Help</h3>
+    <h3 id="myModalLabel">Help</h3>
   </div>
   <div class="modal-body">
-    {{ partial "static/dropbox_help_content" }}
+    {{ partial "modals/shortcuts/shortcuts_content" }}
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>
