--- a/app/assets/javascripts/templates/controls/dropbox.handlebars
+++ b/app/assets/javascripts/templates/controls/dropbox.handlebars
@@ -1,5 +1,5 @@
-{{#if controller.didAuth}}
-  {{#if controller.loggedIn}}
+{{#if controller.state.didAuth}}
+  {{#if controller.state.loggedIn}}
     <button class='btn btn-small' {{action "importDropbox" target="view"}}><i class='icon-cloud-download'></i> Import from Dropbox</button>
     <button class='btn btn-small' {{action "exportDropbox" target="view"}}><i class='icon-cloud-upload'></i> Export to Dropbox</button>
   {{else}}
