compiled new shortcuts

--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -28,7 +28,7 @@
 
 <ul>
 <li>space/double click - Edit item</li>
-<li><del>c - Change item (same as edit item but highlights all text so it can be replaced, copied, cut, etc)</del></li>
+<li><del>??? - Change item (same as edit item but highlights all text so it can be replaced, copied, cut, etc)</del></li>
 <li>backspace/d - Delete item(s)</li>
 <li>tab/l - Indent item(s) one level</li>
 <li>shift+tab/h - Outdent (probably not a word) item(s) one level</li>
@@ -37,9 +37,9 @@
 <h4>Clipboard</h4>
 
 <ul>
-<li><del>x - cut item(s)</del></li>
-<li><del>c - copy item(s)</del></li>
-<li><del>v - paste item(s) below current line</del></li>
+<li>x - cut item(s) (<em>deleting items with backspace or d also cuts automatically</em>)</li>
+<li>c - copy item(s)</li>
+<li>v - paste item(s) below current line</li>
 </ul>
 
 <p>(VIM bindings mode will be different)</p>
