Added fullscreen view

--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -61,6 +61,13 @@
 <li>shift+tab - Outdent one level</li>
 </ul>
 
+<h3>Misc.</h3>
+
+<ul>
+<li>shift+f - fullscreen (experimental)</li>
+<li>? - show help</li>
+</ul>
+
 <h2>Formatting</h2>
 
 <ul>
