better static pages

--- a/app/assets/javascripts/templates/static/404.handlebars
+++ b/app/assets/javascripts/templates/static/404.handlebars
@@ -2,9 +2,11 @@
   &nbsp;
 </div>
 <div class="main">
-  <div class="text-content">
-    <p>Page does not exist.</p>
-    <button id="home-button" class="btn">Return home</class>
+  <div class="body-pane full-width">
+    <div class="scroller">
+      <p>Page does not exist.</p>
+      <button id="home-button" class="btn">Return home</button>
+    </div>
   </div>
 </div>
 <div class='controls bottom'>
