restore full screen state on load

--- a/app/assets/javascripts/templates/static/404.handlebars
+++ b/app/assets/javascripts/templates/static/404.handlebars
@@ -1,3 +1,5 @@
+{{#view Noted.AppWindowView }}
+
 <div class='controls top'>
   &nbsp;
 </div>
@@ -18,3 +20,5 @@
     Noted.Router.router.transitionTo("index");
   })
 </script>
+
+{{/view}}
