--- a/app/assets/javascripts/templates/static/about.handlebars
+++ b/app/assets/javascripts/templates/static/about.handlebars
@@ -1,13 +1,15 @@
-<div class='controls top'>
-  &nbsp;
-</div>
-<div class="main">
-  <div class="body-pane full-width">
-    <div class="scroller">
-      {{partial "static/about_content"}}
+{{#view Noted.AppWindowView }}
+  <div class='controls top'>
+    &nbsp;
+  </div>
+  <div class="main">
+    <div class="body-pane full-width">
+      <div class="scroller">
+        {{partial "static/about_content"}}
+      </div>
     </div>
   </div>
-</div>
-<div class='controls bottom'>
-  &nbsp;
-</div>
+  <div class='controls bottom'>
+    &nbsp;
+  </div>
+{{/view}}
