--- a/app/assets/javascripts/templates/static/_about_content.md.handlebars
+++ b/app/assets/javascripts/templates/static/_about_content.md.handlebars
@@ -1,13 +1,48 @@
-<h1>About Noted</h1>
+<h2>About</h2>
 
-<p>Here&#39;s some test text content. And now some lorem ipsum</p>
+<p>Noted is a note-taking app that uses a modal interface. This makes it super easy to manipulate outlines - quickly move lines around, reindent them, etc.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum at, laoreet mattis, massa. Sed eleifend nonummy diam. Praesent mauris ante, elementum et, bibendum at, posuere sit amet, nibh. Duis tincidunt lectus quis dui viverra vestibulum. Suspendisse vulputate aliquam dui. Nulla elementum dui ut augue. Aliquam vehicula mi at mauris. Maecenas placerat, nisl at consequat rhoncus, sem nunc gravida justo, quis eleifend arcu velit quis lacus. Morbi magna magna, tincidunt a, mattis non, imperdiet vitae, tellus. Sed odio est, auctor ac, sollicitudin in, consequat vitae, orci. Fusce id felis. Vivamus sollicitudin metus eget eros.</p>
+<p>It was made by Thomas Boyt. You should probably follow him on <a href="https://twitter.com/thomasaboyt">Twitter</a> and <a href="https://github.com/thomasboyt">GitHub</a>.</p>
 
-<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In posuere felis nec tortor. Pellentesque faucibus. Ut accumsan ultricies elit. Maecenas at justo id velit placerat molestie. Donec dictum lectus non odio. Cras a ante vitae enim iaculis aliquam. Mauris nunc quam, venenatis nec, euismod sit amet, egestas placerat, est. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras id elit. Integer quis urna. Ut ante enim, dapibus malesuada, fringilla eu, condimentum quis, tellus. Aenean porttitor eros vel dolor. Donec convallis pede venenatis nibh. Duis quam. Nam eget lacus. Aliquam erat volutpat. Quisque dignissim congue leo.</p>
+<h2>What&#39;s New?</h2>
 
-<p>Mauris vel lacus vitae felis vestibulum volutpat. Etiam est nunc, venenatis in, tristique eu, imperdiet ac, nisl. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In iaculis facilisis massa. Etiam eu urna. Sed porta. Suspendisse quam leo, molestie sed, luctus quis, feugiat in, pede. Fusce tellus. Sed metus augue, convallis et, vehicula ut, pulvinar eu, ante. Integer orci tellus, tristique vitae, consequat nec, porta vel, lectus. Nulla sit amet diam. Duis non nunc. Nulla rhoncus dictum metus. Curabitur tristique mi condimentum orci. Phasellus pellentesque aliquam enim. Proin dui lectus, cursus eu, mattis laoreet, viverra sit amet, quam. Curabitur vel dolor ultrices ipsum dictum tristique. Praesent vitae lacus. Ut velit enim, vestibulum non, fermentum nec, hendrerit quis, leo. Pellentesque rutrum malesuada neque.</p>
+<p><em>2/26</em></p>
 
-<p>Nunc tempus felis vitae urna. Vivamus porttitor, neque at volutpat rutrum, purus nisi eleifend libero, a tempus libero lectus feugiat felis. Morbi diam mauris, viverra in, gravida eu, mattis in, ante. Morbi eget arcu. Morbi porta, libero id ullamcorper nonummy, nibh ligula pulvinar metus, eget consectetuer augue nisi quis lacus. Ut ac mi quis lacus mollis aliquam. Curabitur iaculis tempus eros. Curabitur vel mi sit amet magna malesuada ultrices. Ut nisi erat, fermentum vel, congue id, euismod in, elit. Fusce ultricies, orci ac feugiat suscipit, leo massa sodales velit, et scelerisque mi tortor at ipsum. Proin orci odio, commodo ac, gravida non, tristique vel, tellus. Pellentesque nibh libero, ultricies eu, sagittis non, mollis sed, justo. Praesent metus ipsum, pulvinar pulvinar, porta id, fringilla at, est.</p>
+<ul>
+<li>You can now &quot;full-screen&quot; the faux-window in Noted with <code>shift+f</code>.</li>
+<li>This about page now exists!</li>
+<li>Noted now features a full clipboard
 
-<p>Phasellus felis dolor, scelerisque a, tempus eget, lobortis id, libero. Donec scelerisque leo ac risus. Praesent sit amet est. In dictum, dolor eu dictum porttitor, enim felis viverra mi, eget luctus massa purus quis odio. Etiam nulla massa, pharetra facilisis, volutpat in, imperdiet sit amet, sem. Aliquam nec erat at purus cursus interdum. Vestibulum ligula augue, bibendum accumsan, vestibulum ut, commodo a, mi. Morbi ornare gravida elit. Integer congue, augue et malesuada iaculis, ipsum dui aliquet felis, at cursus magna nisl nec elit. Donec iaculis diam a nisi accumsan viverra. Duis sed tellus et tortor vestibulum gravida. Praesent elementum elit at tellus. Curabitur metus ipsum, luctus eu, malesuada ut, tincidunt sed, diam. Donec quis mi sed magna hendrerit accumsan. Suspendisse risus nibh, ultricies eu, volutpat non, condimentum hendrerit, augue. Etiam eleifend, metus vitae adipiscing semper, mauris ipsum iaculis elit, congue gravida elit mi egestas orci. Curabitur pede.</p>
+<ul>
+<li>Deleting an item, whether with d, backspace, or x, will place a copy in your clipboard</li>
+<li>You can also copy an item with c...</li>
+<li>...and, either way, press v to paste it.</li>
+</ul></li>
+<li>Noted also has very beta Dropbox support!
+
+<ul>
+<li>You can sign in with Dropbox using the button in the bottom right, and import or export all of your notes as flat text files</li>
+<li>This is an early feature, and should not be relied on as your exclusive backup choice! If you care about your notes, make sure to make copies of your notes folder in Dropbox every now and then.</li>
+<li>Also, heed the various warnings in the sync dialogs - when you import or export, your entire note set will be replaced! test test</li>
+</ul></li>
+<li>Finally, Noted now has offline support.
+
+<ul>
+<li>Visiting <a href="http://noted.herokuapp.com">http://noted.herokuapp.com</a>, even while completely offline (literally; try disabling your wi-fi), will give you a totally usable version of the page.</li>
+<li>The flip side to this is that when Noted gets an update, it won&#39;t actually update in your browser until you refresh the page. You&#39;ll soon start seeing popups informing you when an update is available . Don&#39;t blame me, blame HTML5!</li>
+</ul></li>
+</ul>
+
+<h2>Technical Details</h2>
+
+<p><strong>Front-end:</strong> Noted uses <a href="http://emberjs.com">Ember.js</a> as its framework, along with several other libraries, including RSVP.js, several of Ben Alman&#39;s jQuery plugins, jwerty, Dropbox.js, and finally <a href="https://github.com/rpflorence/ember-localstorage-adapter">rpflorence&#39;s invaluable localStorage adapter for ember-data</a>. </p>
+
+<p>For styling, Noted uses LESS with Bootstrap. Noted also uses HTML5&#39;s Application Cache abilities for offline support.</p>
+
+<p><strong>Back-end:</strong> While Noted has no actual backend API, it relies on Rails (and the Ember-Rails gem) for building and serving its content. It also uses wycats&#39;s <a href="https://github.com/wycats/rack-offline">Rack::Offline</a> to generate its application cache manifest.</p>
+
+<p>Theoretically, at some point, Noted will use RSpec + Capybara + Selenium for integration/acceptance testing the app. Until then, I just try not to break stuff too often.</p>
+
+<p>Oh, and finally, this about page and several other templates were written in Markdown compiled with Redcarpet.</p>
+
+<p>I think that&#39;s everything!</p>
