--- a/app/assets/javascripts/templates/static/about.handlebars
+++ b/app/assets/javascripts/templates/static/about.handlebars
@@ -5,7 +5,9 @@
   <div class="main">
     <div class="body-pane full-width">
       <div class="scroller">
-        {{partial "static/about_content"}}
+        <div class="scroller-content text-content">
+          {{partial "static/about_content"}}
+        </div>
       </div>
     </div>
   </div>
