--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -240,6 +240,10 @@ header {
     .scroller-content {
       position:relative;
 
+      &.text-content {
+        padding:10px 20px;
+      }
+
       ul {
         padding-right:10px;
 
