--- a/app/assets/javascripts/templates/item_static.handlebars
+++ b/app/assets/javascripts/templates/item_static.handlebars
@@ -1,5 +1,5 @@
 {{#with listItem}}
   <li {{bindAttr class=':entry-item isActive'}} {{bindAttr style='computedIndentionStyle'}}>
-    <span>{{text}}</span>
+    <span>{{{markedText}}}</span>
   </li>
 {{/with}}
