Updated about page for 2/27

--- a/app/assets/javascripts/templates/static/_about_content.md.handlebars
+++ b/app/assets/javascripts/templates/static/_about_content.md.handlebars
@@ -6,7 +6,13 @@
 
 <h2>What&#39;s New?</h2>
 
-<p><em>2/26</em></p>
+<p><em>February 27</em></p>
+
+<ul>
+<li>Added Markdown formatting! You can feel free to *italicize*, **bold**, add [links](<a href="http://placekitten.com%5C">http://placekitten.com\</a>), `code bits`, and ![images](<a href="http://placekitten.com/200/300%5C">http://placekitten.com/200/300\</a>).</li>
+</ul>
+
+<p><em>February 26</em></p>
 
 <ul>
 <li>You can now &quot;full-screen&quot; the faux-window in Noted with <code>shift+f</code>.</li>
@@ -35,7 +41,7 @@
 
 <h2>Technical Details</h2>
 
-<p><strong>Front-end:</strong> Noted uses <a href="http://emberjs.com">Ember.js</a> as its framework, along with several other libraries, including RSVP.js, several of Ben Alman&#39;s jQuery plugins, jwerty, Dropbox.js, and finally <a href="https://github.com/rpflorence/ember-localstorage-adapter">rpflorence&#39;s invaluable localStorage adapter for ember-data</a>. </p>
+<p><strong>Front-end:</strong> Noted uses <a href="http://emberjs.com">Ember.js</a> as its framework, along with several other libraries, including RSVP.js, several of Ben Alman&#39;s jQuery plugins, jwerty, Dropbox.js, Marked (for Markdown formatting), and finally <a href="https://github.com/rpflorence/ember-localstorage-adapter">rpflorence&#39;s invaluable localStorage adapter for ember-data</a>. </p>
 
 <p>For styling, Noted uses LESS with Bootstrap. Noted also uses HTML5&#39;s Application Cache abilities for offline support.</p>
 
