Updated about & help popup

--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -1,4 +1,4 @@
-<h2>Command Reference</h2>
+<h2>Key Reference</h2>
 
 <p>(ctrl/cmd are interchangeable)</p>
 
@@ -66,7 +66,12 @@
 
 <h2>Formatting</h2>
 
+<p>Noted supports a small subset of <a href="http://daringfireball.net/projects/markdown/">Markdown</a> for formatting.</p>
+
 <ul>
-<li><del><code>_underscores_</code> put text in italics</del></li>
-<li><del><code>*asterisks*</code> bold text</del></li>
+<li>Italics: <code>*italicized text*</code> or <code>_italicized text_</code></li>
+<li>Bold: <code>**bolded text**</code> or <code>__bolded text__</code></li>
+<li>Fixed/monospace: <code>`monospace text`</code></li>
+<li>Links: <code>http://google.com</code> will be automatically made into a link, or you can use the <code>[title](link)</code> format (i.e.) <code>[Google](http://google.com)</code></li>
+<li>Images: <code>![](http://placekitten.com/200/300)</code> <em>(note that images will not be saved for offline viewing)</em></li>
 </ul>
