--- a/app/assets/javascripts/templates/static/_about_content.md.handlebars
+++ b/app/assets/javascripts/templates/static/_about_content.md.handlebars
@@ -9,7 +9,8 @@
 <p><em>February 27</em></p>
 
 <ul>
-<li>Added Markdown formatting! You can feel free to *italicize*, **bold**, add [links](<a href="http://placekitten.com%5C">http://placekitten.com\</a>), `code bits`, and ![images](<a href="http://placekitten.com/200/300%5C">http://placekitten.com/200/300\</a>).</li>
+<li>Added Markdown formatting! You now use <code>*italics*</code>, <code>**bold**</code>, <code>[links](http://placekitten.com)</code>, <code>`code/fixed-width/monospace bits`</code>, and <code>![images](http://placekitten.com/200/300)</code>.</li>
+<li>Fixed Dropbox syncing bugs, and actually enabled Dropbox for users besides me (turns out there&#39;s an approval process and everything!).</li>
 </ul>
 
 <p><em>February 26</em></p>
