--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -1,330 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
-@import "modals";
 @import "paths";
 
-@controls-bg: rgb(228,228,228);
-
-html, body {
-  background-color:#212133;
-  height:100%;
-  overflow:hidden;
-}
-
-// http://stackoverflow.com/questions/13119906/turning-off-twitter-bootstrap-navbar-transition-animation
-.no-transition {
-  -webkit-transition: height 0;
-  -moz-transition: height 0;
-  -ms-transition: height 0;
-  -o-transition: height 0;
-  transition: height 0;
-}
-
-.border-radius-custom(@topLeft, @topRight, @bottomRight, @bottomLeft) {
-  -webkit-border-top-left-radius: @topLeft;
-      -moz-border-radius-topleft: @topLeft;
-          border-top-left-radius: @topLeft;
-  -webkit-border-top-right-radius: @topRight;
-      -moz-border-radius-topright: @topRight;
-          border-top-right-radius: @topRight;
-  -webkit-border-bottom-right-radius: @bottomRight;
-      -moz-border-radius-bottomright: @bottomRight;
-          border-bottom-right-radius: @bottomRight;
-  -webkit-border-bottom-left-radius: @bottomLeft;
-      -moz-border-radius-bottomleft: @bottomLeft;
-          border-bottom-left-radius: @bottomLeft;
-  -webkit-background-clip: padding-box;
-     -moz-background-clip: padding;
-          background-clip: padding-box;
-}
-
-.controls-gradient() {
-  #gradient > .vertical(rgb(228,228,228), rgb(175,175,175))
-}
-
-/*
-
---------------
- Scaffolding
---------------
-
-*/
-
-.wrapper {
-  margin:0px auto 0;
-  width:90%;
-  height:100%;
-  min-height:100%;
-}
-
-header {
-  position:relative;
-  margin: 0px auto 0px auto;
-  height:64px;
-  margin-bottom:-64px;
-}
-
-.window {
-  position:absolute;
-  left:50%;
-  margin-left:-48%;
-  top:60px;
-  bottom:80px;
-  width:96%;
-
-  -moz-transition-property: top, bottom, width, margin-left;
-  -moz-transition-duration: 0.2s;
-  -webkit-transition-property: top, bottom, width, margin-left;
-  -webkit-transition-duration: 0.2s;
-  transition-property: top, bottom, width, margin-left;
-  transition-duration: 0.2s;
-
-  &.full-screen {
-    top:0px;
-    bottom:62px;
-    width:100%;
-    margin-left:-50%;
-  }
-
-  &:not(.full-screen) {
-    .controls.top {
-      .border-radius-custom(10px, 10px, 0, 0);
-    }
-    .controls.bottom {
-      .border-radius-custom(0, 0, 10px, 10px);
-    }
-  }
-
-  .controls {
-    height:30px;
-
-    &.top {
-      border-bottom: 1px rgb(125,125,125) solid;
-    }
-
-    &.bottom {
-      border-top: 1px rgb(125,125,125) solid;
-      .clearfix();
-    }
-
-    .btn {
-      .buttonBackground(rgb(228,228,228), darken(rgb(175,175,175), 10%), #333, 0 1px 1px rgba(255, 255, 255, 0.75));
-      border-color:#555;
-      margin-top:2px;
-      font-weight:500;
-
-      &:hover {
-        background-position:0 0;
-      }
-    }
-
-    .left-controls {
-      float:left;
-      margin-left:10px;
-    }
-
-    .right-controls {
-      float:right;
-      margin-right:10px;
-    }
-  }
-
-  .main {
-    height:100%;
-    width:100%;
-    .clearfix();
-  }
-
-  .sidebar-pane {
-    width:180px;
-    display: inline;
-    float: left;
-  }
-}
-
-header {
-  margin:0;
-  div.left {
-    position:absolute;
-    left:0px;
-    bottom:10px;
-    
-    h1 {
-      font-size:38px;
-      line-height:38px;
-      margin:0;
-      padding:0;
-      font-weight:bold;
-      color: #eeee00;
-    }
-  }
-  div.right {
-    position:absolute;
-    bottom:15px;
-    right:0px;
-    text-align:right;
-    font-size:24px;
-    line-height:24px;
-    color:#fff;
-    a {
-      color: #eeee00;
-    }
-  }
-}
-
-
-
-// ------------
-// App Sections
-// ------------
-
-.controls {
-  .controls-gradient();
-}
-
-.window > * {  
-  background-color:#f3f3f3;
-}
-
-.sidebar-pane {
-  overflow:auto;
-  height:inherit;
-
-  border-right: 1px #aaa solid;
-  cursor:default;
-
-  resize: horizontal;
-  overflow: scroll;
-  float:left;
-  width:200px;
-  max-width:400px;
-
-  a:hover {
-    text-decoration:none !important;
-  }
-
-  li {
-    padding:5px;
-    border-bottom:1px solid #aaa;
-    font-size:14px;
-
-    //:last-child doesn't work due to metamorph tags
-    &:nth-last-of-type(1) {
-      border-top:none;
-    }
-
-    &.is-selected {
-      color:#eee;
-      background-color:darken(#0088cc, 15%);
-    }
-  }
-}
-
-
-.body-pane {
-  overflow:hidden;
-  height:inherit;
-  margin-left:180px;
-  position:relative;
-  margin-right:5px;
-
-  &.full-width {
-    margin-left:5px;
-  }
-
-  .scroller {
-    position:absolute;
-    overflow-x:hidden;
-    overflow-y:scroll;
-    top:0px;
-    bottom:0px;
-    width:100%;
-
-    .scroller-content {
-      position:relative;
-
-      &.text-content {
-        padding:10px 20px;
-      }
-
-      ul {
-        padding-right:10px;
-
-        div.placeholder { 
-           -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-          text-align:center;
-          padding:100px 300px;
-          border:1px #000 solid;
-        }
-
-        &:focus {
-          outline:none !important;
-
-          div.placeholder {
-            background-color:#eeee00;
-          }
-        }
-
-        li {
-          position:relative;
-          &.is-active, &.is-editing {
-            background-color:#eeee00;
-          }
-          &.is-editing {
-            margin-right:10px;
-          }
-          line-height:24px;
-          padding:0;
-          vertical-align:top;
-
-          span {
-            display:block;
-            padding-left:1px;
-            padding-top:1px;
-            padding-bottom:1px;
-          }
-
-          textarea {
-            display:inline-block;
-            box-sizing:border-box;
-            resize:none;
-            vertical-align:top;
-            background:#d9dee6;
-            
-            .border-radius(0px);
-            box-shadow: none;
-            color: @grayDark;
-
-            height:24px;
-            line-height:24px;
-            margin:0;
-            margin-left:-2px;
-
-            padding:0 2px;
-            
-            width:100%;
-          }
-        }
-      }
-    }
-  }
-
-  h3 {
-    margin-right:20px;
-    margin-top:0px;
-  }
-
-  h3 input {
-    margin:5px;
-    background:none;
-    .border-radius(0px);
-    box-shadow: none;
-
-    font-size:30px;
-    height: @baseLineHeight * 2;
-    color:@grayDark;
-    font-weight:bold;
-
-    width:100%;
-  }
-}
-
+@import "colors";
+@import "scaffolding";
+@import "styling";
+@import "modals";
