--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -4,38 +4,40 @@
 
 <p>In addition to the below bindings, there&#39;s also some secret-ish VIM bindings (that are also half-implemented). Eventually there will be a toggle between &quot;Noted&quot; bindings and &quot;VIM&quot; bindings.</p>
 
-<h3>Command Mode</h3>
-
-<del>There are two selection modes in command mode: single and multi. In single mode, the selection is whatever item you navigate to. In multi mode, which is entered by pressing s on the first item you want to select, each selected item is highlighted yellow, with the navigation cursor turning green.</del>
+<h3>Movement Mode</h3>
 
 <h4>Selecting</h4>
 
 <ul>
 <li>Click an item to select it</li>
-<li>j/up arrow - Move selection down one item</li>
-<li>k/down arrow - Move selection up one item</li>
-<li><del>a - Select first item</del></li>
-<li><del>f - Select last item</del></li>
-<li><del>s - Add item to selection</del></li>
-<li><del>d - Remove item from selection</del></li>
+<li><code>j/down arrow</code> - Move selection down one item</li>
+<li><code>k/up arrow</code> - Move selection up one item</li>
+<li><del><code>shift + (j/down arrow)</code> - Move selection to next item on the same level</del></li>
+<li><del><code>shift + (k/up arrow)</code> - Move selection to previous item on the same level</del></li>
+<li><del><code>a</code> - Select first item</del></li>
+<li><del><code>f</code> - Select last item</del></li>
 </ul>
 
 <h4>Editing</h4>
 
 <ul>
-<li>space/double click - Edit item</li>
+<li><code>space/double click</code> - Edit item</li>
 <li><del>??? - Change item (same as edit item but highlights all text so it can be replaced, copied, cut, etc)</del></li>
-<li>backspace/d - Delete item(s)</li>
-<li>tab/l - Indent item(s) one level</li>
-<li>shift+tab/h - Outdent (probably not a word) item(s) one level</li>
+<li><code>backspace/d</code> - Delete item(s)</li>
+<li><del><code>shift + (backspace/d)</code> - Delete item &amp; children</del></li>
+<li><code>tab/l</code> - Indent item(s) one level</li>
+<li><code>shift+l</code> - Indent item &amp; children one level</li>
+<li><code>shift+tab/h</code> - Outdent (probably not a word) item(s) one level</li>
 </ul>
 
 <h4>Clipboard</h4>
 
 <ul>
-<li>x - cut item(s) (<em>deleting items with backspace or d also cuts automatically</em>)</li>
-<li>c - copy item(s)</li>
-<li>v - paste item(s) below current line</li>
+<li><code>x</code> - cut item (<em>deleting items with backspace or d also cuts automatically</em>)</li>
+<li><code>c</code> - copy item</li>
+<li><code>v</code> - paste item below current line</li>
+<li><del><code>shift+x</code> - cut item and children</del></li>
+<li><del><code>shift+c</code> - copy item and children</del></li>
 </ul>
 
 <p>(VIM bindings mode will be different)</p>
@@ -43,25 +45,25 @@
 <h4>Inserting</h4>
 
 <ul>
-<li>enter - Insert new item on the next line with the same indention level</li>
-<li><del> shift+enter - Insert new item on the next line with one indention level deeper</del></li>
-<li><del>ctrl+enter - Insert new item on the next line with one indention level less </del></li>
+<li><code>enter</code> - Insert new item on the next line with the same indention level</li>
+<li><del> <code>shift+enter</code> - Insert new item on the next line with one indention level deeper</del></li>
+<li><del><code>ctrl+enter</code> - Insert new item on the next line with one indention level less </del></li>
 </ul>
 
 <h3>Edit Mode</h3>
 
 <ul>
-<li>enter - Save item &amp; exit edit mode</li>
-<li>escape - Revert changes &amp; exit edit mode</li>
-<li>tab - Indent one level</li>
-<li>shift+tab - Outdent one level</li>
+<li><code>enter</code> - Save item &amp; exit edit mode</li>
+<li><code>escape</code> - Revert changes &amp; exit edit mode</li>
+<li><code>tab</code> - Indent one level</li>
+<li><code>shift+tab</code> - Outdent one level</li>
 </ul>
 
 <h3>Misc.</h3>
 
 <ul>
-<li>shift+f - fullscreen (experimental)</li>
-<li>? - show help</li>
+<li><code>shift+f</code> - fullscreen (experimental)</li>
+<li><code>?</code> - show help</li>
 </ul>
 
 <h2>Formatting</h2>
