Added footer (backup warning)

--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -10,7 +10,7 @@
 {{outlet}}
 
 <footer>
-  <!-- ... -->
+  Noted is under active development. Please back up your notes regularly.
 </footer>
 
 {{partial "modals/shortcuts/shortcuts_modal"}}
