--- a/app/assets/stylesheets/scaffolding.less
+++ b/app/assets/stylesheets/scaffolding.less
@@ -33,7 +33,7 @@ header {
   left:50%;
   margin-left:-48%;
   top:60px;
-  bottom:80px;
+  bottom:90px;
   width:96%;
 
   &.full-screen {
@@ -41,6 +41,7 @@ header {
     bottom:62px;
     width:100%;
     margin-left:-50%;
+    z-index:5
   }
 
   .controls {
@@ -169,4 +170,13 @@ header {
       }
     }
   }
+}
+
+footer {
+  position:absolute;
+  text-align:center;
+  left:50%;
+  width:96%;
+  margin-left:-48%;
+  bottom:5px;
 }
