Added block highlighting on shift.
Hope you like mustard yellow.

--- a/app/assets/javascripts/templates/item_static.handlebars
+++ b/app/assets/javascripts/templates/item_static.handlebars
@@ -1,5 +1,5 @@
 {{#with listItem}}
-  <li {{bindAttr class=':entry-item isActive'}} {{bindAttr style='computedIndentionStyle'}}>
+  <li {{bindAttr class=':entry-item isActive isHighlighted'}} {{bindAttr style='computedIndentionStyle'}}>
     <span>{{{markedText}}}</span>
   </li>
 {{/with}}
