--- a/app/assets/javascripts/templates/item_editing.handlebars
+++ b/app/assets/javascripts/templates/item_editing.handlebars
@@ -1,5 +1,5 @@
 {{#with listItem}}
-  <li {{bindAttr class=':entry-item isActive'}} {{bindAttr style='computedIndentionStyle'}}>
+  <li {{bindAttr class=':entry-item isActive isHighlighted'}} {{bindAttr style='computedIndentionStyle'}}>
     {{view Noted.ItemTextArea valueBinding=text itemBinding=this}}
   </li>
 {{/with}}
