Full-width highlighting

--- a/app/assets/stylesheets/colors.less
+++ b/app/assets/stylesheets/colors.less
@@ -1,15 +1,15 @@
 // Colors.less
 // Defines the various colors used throughout Noted
 
-@activeColor: #eeee00;
-@highlightedColor: lighten(desaturate(@activeColor, 30%), 20%); 
+@activeColor: rgba(153, 156, 131, 0.4);
+@highlightedColor: lighten(@activeColor, 20%); 
 
 @notedBackground: #212133;
 
 @controlsGradientTop: rgb(228,228,228);
 @controlsGradientBottom: rgb(175,175,175);
 
-@headerLink: @activeColor;
+@headerLink: #eeee00;
 @headerText: #ffffff;
 
 @windowBackground: #f3f3f3;
