--- a/app/assets/stylesheets/scaffolding.less
+++ b/app/assets/stylesheets/scaffolding.less
@@ -142,6 +142,7 @@ header {
             line-height:24px;
             padding:0;
             vertical-align:top;
+            list-style-position:inside;
 
             span {
               display:block;
