--- a/app/assets/stylesheets/scaffolding.less
+++ b/app/assets/stylesheets/scaffolding.less
@@ -158,6 +158,7 @@ header {
                 width:24px;
                 height:24px;
                 left:0;
+                font-size:24px;
               }
             }
 
